@@ -40,6 +40,7 @@ https://github.com/elastic/beats/compare/v5.0.0-rc1...5.0[Check the HEAD diff]
 *Topbeat*
 
 *Filebeat*
+- Fix issue when clean_removed and clean_inactive were used together that states were not directly removed from the registry.
 
 *Winlogbeat*
 
